# corridorkey-ae

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: AI Agent Handoff_ Build CorridorKey AE.md  Phase 1 Repository Findings.md  Phase 2 After Effects Plugin Foundation Findings.md  Product Requirements Document_ CorridorKey for After Effects.md  after_effects_plugin_wide_research_phase2.json  corridorkey_wide_research_phase1.json
installer/macos/: Distribution.xml  requirements.txt
installer/macos/scripts/: postinstall
installer/windows/: CorridorKey.iss  requirements-torch.txt  requirements.txt
plugin/: CMakeLists.txt
plugin/include/: CorridorKeyAE.h  CorridorKeyAE_AutoHint.h  CorridorKeyAE_Bridge.h  CorridorKeyAE_Logo.h  CorridorKeyAE_Params.h  CorridorKeyAE_Render.h  CorridorKeyAE_UI.h  CorridorKeyAE_Version.h
plugin/resources/: CorridorKeyAE.rc  CorridorKeyAEPiPL.r  Info.plist.in  WritePkgInfo.cmake
plugin/src/: CorridorKeyAE.cpp  CorridorKeyAE_AutoHint.cpp  CorridorKeyAE_Bridge.cpp  CorridorKeyAE_Params.cpp  CorridorKeyAE_Render.cpp  CorridorKeyAE_UI.cpp
runtime/: pyproject.toml
runtime/engines/: __init__.py  _greenformer.py  _weights_loader.py  base.py  mlx_engine.py  postprocess.py  pytorch_engine.py
runtime/models/: __init__.py  manager.py
runtime/server/: __init__.py  handler.py  hardware.py  ipc.py  main.py
runtime/tests/: test_handler.py  test_hardware.py  test_model_manager.py  test_weights_loader.py
scripts/bootstrap/: run_tests.sh  setup_dev.sh
scripts/installer/: build_macos.sh  build_windows.ps1  clean_and_test_macos.sh  clean_and_test_windows.ps1  clean_macos.sh  clean_windows.ps1
scripts/package/: build_plugin.sh
shared/protocol/: __init__.py  messages.py
shared/schema/: output_modes.json
