[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corridorkey-runtime"
version = "0.1.0"
description = "CorridorKey AE inference runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "msgpack>=1.0",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.1",
    "torchvision>=0.16",
]
mlx = [
    "corridorkey-mlx @ git+https://github.com/nikopueringer/corridorkey-mlx.git",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
corridorkey-runtime = "server.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
